<resources>
    <string name="app_name">wardrobe-application</string>
    <string name="btnBack">Back</string>
    <string name="btnUploadItem">Upload Item</string>
    <string name="text_header">text_header</string>
    <string name="editText_main">text_header</string>
    <string name="button_main">button_main</string>
    <string name="title">title</string>
    <string name="itemNum">itemNum</string>
    <string name="tvAddItem">Add an item</string>
    <string name="tvCategory">Category</string>
    <string name="tvTitle">Title</string>
    <string name="tvDescription">Description</string>
    <string name="tvBrand">Brand</string>
    <string name="tvSize">Size</string>
    <string name="tvCondition">Condition</string>
    <string name="tvColour">Colour</string>
    <string name="tvPrice">Price</string>
    <string name="tvMaterial">Material</string>
    <string name="etTitle">etTitle</string>
    <string name="etDescription">etDescription</string>
    <string name="etBrand">etBrand</string>
    <string name="etMaterial">etMaterial</string>
    <string name="etPrice">etPrice</string>
    <string name="tvItemNum">0 Items</string>
    <string name="tvItemDetails">Item details</string>
    <string name="tvAddItemDetails">Add item details</string>
    <string name="itemImage">Item Image</string>
    <string name="tvCategoryLabel">Category</string>
    <string name="tvTitleLabel">Title</string>
    <string name="tvDescriptionLabel">Description</string>
    <string name="tvBrandLabel">Brand</string>
    <string name="tvSizeLabel">Size</string>
    <string name="tvConditionLabel">Condition</string>
    <string name="tvColourLabel">Colour</string>
    <string name="tvMaterialLabel">Material</string>
    <string name="tvPriceLabel">Price</string>
    <string name="btnImageUpload">Where users upload their item image</string>
    <string name="btnDeleteItem">Delete item</string>
    <string name="clothingImage">image</string>
    <string name="btnDeleteItemDesc">Deletes a wardrobe item</string>
    <string name="etTitleHint">Enter a title</string>
    <string name="your_virtual_wardrobe">Your Virtual Wardrobe</string>
    <string name="addItem">+</string>
    <string name="search">Search…</string>
    <string name="etDescriptionHint">Enter a description</string>
    <string name="etBrandHint">Enter the brand</string>
    <string name="etMaterialHint">Enter the material(s)</string>
    <string name="etPriceHint">Enter the price</string>
    <string name="tvAppTitle">Armoire</string>
    <string name="svWardrobe">Search...</string>
    <string name="the_brand_of_the_item">The brand of the item</string>
    <string name="appName">Armoire</string>


    <string-array name ="array_category">
        <item>Select a category</item>
        <item>Tops</item>
        <item>Bottoms</item>
        <item>Dresses</item>
        <item>Jackets and Coats</item>
        <item>Swimwear</item>
        <item>Shoes</item>
    </string-array>

    <string-array name="array_size">
        <item>Select a size</item>
        <item>XXXS / UK 0</item>
        <item>XXS / UK 2</item>
        <item>XS / UK 4–6</item>
        <item>S / UK 8–10</item>
        <item>M / UK 12–14</item>
        <item>L / UK 14–16</item>
        <item>XL / UK 16–18</item>
        <item>XXL / UK 18–20</item>
        <item>XXXL / UK 22–24</item>
    </string-array>

    <string-array name="array_condition">
        <item>Select a condition</item>
        <item>New with tags</item>
        <item>New without tags</item>
        <item>Very good</item>
        <item>good</item>
        <item>okay</item>
    </string-array>

    <string-array name="array_colour">
        <item>Select a colour</item>
        <item>Black</item>
        <item>Gray</item>
        <item>White</item>
        <item>Red</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Brown</item>
        <item>Beige</item>
        <item>Multi-colour</item>
    </string-array>


    <string-array name="filter_menu">
        <item>Sort by…</item>
        <item>Category</item>
        <item>Size</item>
        <item>Condition</item>
        <item>Colour</item>
        <item>Price</item>
    </string-array>

    <string-array name="filter_category">
        <item>All</item>
        <item>Tops</item>
        <item>Bottoms</item>
        <item>Dresses</item>
        <item>Jackets and Coats</item>
        <item>Swimwear</item>
        <item>Shoes</item>
    </string-array>

    <string-array name="filter_size">
        <item>All</item>
        <item> XXXS / UK 0</item>
        <item> XXS / UK 2</item>
        <item> XS / UK 4–6</item>
        <item> S / UK 8–10</item>
        <item> M / UK 12–14</item>
        <item> L / UK 14–16</item>
        <item> XL / UK 16–18</item>
        <item> XXL / UK 18–20</item>
        <item> XXXL / UK 22–24</item>
    </string-array>

    <string-array name="filter_condition">
        <item>All</item>
        <item>New with tags</item>
        <item>New without tags</item>
        <item>Very good</item>
        <item>good</item>
        <item>okay</item>
    </string-array>

    <string-array name="filter_colour">
        <item>All</item>
        <item>Black</item>
        <item>Gray</item>
        <item>White</item>
        <item>Red</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Brown</item>
        <item>Beige</item>
        <item>Multi-colour</item>
    </string-array>

    <string-array name="filter_price">
        <item>All</item>
        <item>Lowest to highest</item>
        <item>Highest to lowest</item>
    </string-array>
</resources>