<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="39dp">

    <TextView
        android:id="@+id/tvAddItemDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tvAddItemDetails"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnImageUpload"
        android:layout_width="168dp"
        android:layout_height="131dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/btnImageUpload"
        app:layout_constraintEnd_toEndOf="@id/tvAddItemDetails"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@id/tvAddItemDetails"
        app:layout_constraintTop_toBottomOf="@id/tvAddItemDetails"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="97dp"
        android:layout_height="54dp"
        android:text="@string/tvCategory"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/btnImageUpload"
        app:layout_constraintEnd_toStartOf="@id/btnImageUpload"
        app:layout_constraintTop_toBottomOf="@id/btnImageUpload" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="119dp"
        android:layout_height="50dp"
        android:text="@string/tvTitle"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/tvCategory"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tvCategory"
        app:layout_constraintTop_toBottomOf="@id/tvCategory" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="132dp"
        android:layout_height="57dp"
        android:text="@string/tvDescription"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/tvTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvBrand"
        android:layout_width="132dp"
        android:layout_height="51dp"
        android:text="@string/tvBrand"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/tvDescription"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tvDescription"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="128dp"
        android:layout_height="50dp"
        android:text="@string/tvSize"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/tvBrand"
        app:layout_constraintStart_toStartOf="@id/tvBrand"
        app:layout_constraintTop_toBottomOf="@id/tvBrand" />

    <TextView
        android:id="@+id/tvCondition"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:text="@string/tvCondition"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/tvSize"
        app:layout_constraintStart_toStartOf="@id/tvSize"
        app:layout_constraintTop_toBottomOf="@id/tvSize" />

    <TextView
        android:id="@+id/tvColour"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:text="@string/tvColour"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/tvCondition"
        app:layout_constraintStart_toStartOf="@id/tvCondition"
        app:layout_constraintTop_toBottomOf="@id/tvCondition" />

    <TextView
        android:id="@+id/tvMaterial"
        android:layout_width="112dp"
        android:layout_height="46dp"
        android:text="@string/tvMaterial"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/tvColour"
        app:layout_constraintStart_toStartOf="@id/tvColour"
        app:layout_constraintTop_toBottomOf="@id/tvColour" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="121dp"
        android:layout_height="43dp"
        android:text="@string/tvPrice"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/tvMaterial"
        app:layout_constraintStart_toStartOf="@id/tvMaterial"
        app:layout_constraintTop_toBottomOf="@id/tvMaterial" />


    <Spinner
        android:id="@+id/spCategory"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@id/btnImageUpload"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toEndOf="@id/btnImageUpload"
        app:layout_constraintTop_toBottomOf="@id/btnImageUpload" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/etTitleHint"
        android:inputType="textLongMessage"
        android:autofillHints="none"
        app:layout_constraintEnd_toEndOf="@id/spCategory"
        app:layout_constraintStart_toStartOf="@id/spCategory"
        app:layout_constraintTop_toBottomOf="@id/spCategory" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="177dp"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="@string/etDescriptionHint"
        android:autofillHints="none"
        android:inputType="textLongMessage"
        app:layout_constraintEnd_toEndOf="@id/etTitle"
        app:layout_constraintStart_toStartOf="@id/etTitle"
        app:layout_constraintTop_toBottomOf="@id/etTitle" />

    <EditText
        android:id="@+id/etBrand"
        android:layout_width="193dp"
        android:layout_height="48dp"
        android:autofillHints="meow"
        android:ems="10"
        android:hint="@string/etBrandHint"
        android:inputType="textLongMessage"
        app:layout_constraintEnd_toEndOf="@id/etDescription"
        app:layout_constraintStart_toStartOf="@id/etDescription"
        app:layout_constraintTop_toBottomOf="@id/etDescription" />

    <Spinner
        android:id="@+id/spSize"
        android:layout_width="201dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="@id/etBrand"
        app:layout_constraintStart_toStartOf="@id/etBrand"
        app:layout_constraintTop_toBottomOf="@id/etBrand" />

    <Spinner
        android:id="@+id/spCondition"
        android:layout_width="209dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="@id/spSize"
        app:layout_constraintStart_toStartOf="@id/spSize"
        app:layout_constraintTop_toBottomOf="@id/spSize" />

    <Spinner
        android:id="@+id/spColour"
        android:layout_width="202dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="@id/spCondition"
        app:layout_constraintStart_toStartOf="@id/spCondition"
        app:layout_constraintTop_toBottomOf="@id/spCondition" />

    <EditText
        android:id="@+id/etMaterial"
        android:layout_width="205dp"
        android:layout_height="48dp"
        android:autofillHints="meow"
        android:ems="10"
        android:hint="@string/etMaterialHint"
        android:inputType="textLongMessage"
        app:layout_constraintEnd_toEndOf="@id/spColour"
        app:layout_constraintStart_toStartOf="@id/spColour"
        app:layout_constraintTop_toBottomOf="@id/spColour" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="213dp"
        android:layout_height="50dp"
        android:autofillHints="meow"
        android:ems="10"
        android:hint="@string/etPriceHint"
        android:inputType="textLongMessage"
        app:layout_constraintEnd_toEndOf="@id/etMaterial"
        app:layout_constraintStart_toStartOf="@id/etMaterial"
        app:layout_constraintTop_toBottomOf="@id/etMaterial" />

    <Button
        android:id="@+id/btnUploadItem"
        android:layout_width="111dp"
        android:layout_height="64dp"
        android:layout_marginStart="132dp"
        android:layout_marginBottom="4dp"
        android:onClick="collectItemData"
        android:text="@string/btnUploadItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="316dp"
        android:onClick="returnToMainActivity"
        android:text="@string/btnBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>