<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_data_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemDataActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="39dp">

    <Button
        android:id="@+id/btnDeleteItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/btnDeleteItemDesc"
        android:onClick="onDeleteButtonClick"
        android:text="@string/btnDeleteItem"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnBackToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="312dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/black"
        android:onClick="returnToMainActivity"
        android:text="@string/btnBack"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvItemDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/tvItemDetails"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivDisplayItemImage"
        android:layout_width="201dp"
        android:layout_height="150dp"
        android:contentDescription="@string/itemImage"
        app:layout_constraintStart_toStartOf="@id/tvItemDetails"
        app:layout_constraintEnd_toEndOf="@id/tvItemDetails"
        app:layout_constraintTop_toBottomOf="@id/tvItemDetails"
        android:background="@color/black"
        app:cornerRadius="12dp"
        android:textColor="@color/white"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/tvCategoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCategoryLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/ivDisplayItemImage"
        app:layout_constraintEnd_toStartOf="@id/ivDisplayItemImage"
        app:layout_constraintTop_toBottomOf="@id/ivDisplayItemImage" />

    <TextView
        android:id="@+id/tvTitleLabel"
        android:layout_width="104dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:labelFor="@id/tvTitle"
        android:text="@string/tvTitleLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tvCategoryLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tvCategoryLabel"
        app:layout_constraintTop_toBottomOf="@id/tvCategoryLabel" />

    <TextView
        android:id="@+id/tvDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@id/tvDescription"
        android:text="@string/tvDescriptionLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tvTitleLabel"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/tvTitleLabel"
        app:layout_constraintTop_toBottomOf="@id/tvTitleLabel" />

    <TextView
        android:id="@+id/tvBrandLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:labelFor="@id/tvBrand"
        android:text="@string/tvBrandLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tvDescriptionLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tvDescriptionLabel"
        app:layout_constraintTop_toBottomOf="@id/tvDescriptionLabel" />

    <TextView
        android:id="@+id/tvSizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:labelFor="@id/tvSize"
        android:text="@string/tvSizeLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tvBrandLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tvBrandLabel"
        app:layout_constraintTop_toBottomOf="@id/tvBrandLabel" />

    <TextView
        android:id="@+id/tvConditionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@id/tvCondition"
        android:text="@string/tvConditionLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tvSizeLabel"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="@id/tvSizeLabel"
        app:layout_constraintTop_toBottomOf="@id/tvSizeLabel" />

    <TextView
        android:id="@+id/tvColourLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:labelFor="@id/tvColour"
        android:text="@string/tvColourLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tvConditionLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tvConditionLabel"
        app:layout_constraintTop_toBottomOf="@id/tvConditionLabel" />

    <TextView
        android:id="@+id/tvMaterialLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@id/tvMaterial"
        android:text="@string/tvMaterialLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tvColourLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tvColourLabel"
        app:layout_constraintTop_toBottomOf="@id/tvColourLabel" />


    <TextView
        android:id="@+id/tvPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:labelFor="@id/tvPrice"
        android:text="@string/tvPriceLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tvMaterialLabel"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="@id/tvMaterialLabel"
        app:layout_constraintTop_toBottomOf="@id/tvMaterialLabel" />

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="199dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/ivDisplayItemImage"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toEndOf="@id/ivDisplayItemImage"
        app:layout_constraintTop_toBottomOf="@id/ivDisplayItemImage" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="197dp"
        android:layout_height="41dp"
        android:ems="10"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tvCategory"
        app:layout_constraintStart_toStartOf="@id/tvCategory"
        app:layout_constraintTop_toBottomOf="@id/tvCategory" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="196dp"
        android:layout_height="71dp"
        android:ems="10"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvBrand"
        android:layout_width="199dp"
        android:layout_height="33dp"
        android:ems="10"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tvDescription"
        app:layout_constraintStart_toStartOf="@id/tvDescription"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="202dp"
        android:layout_height="33dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tvBrand"
        app:layout_constraintStart_toStartOf="@id/tvBrand"
        app:layout_constraintTop_toBottomOf="@id/tvBrand" />

    <TextView
        android:id="@+id/tvCondition"
        android:layout_width="196dp"
        android:layout_height="52dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tvSize"
        app:layout_constraintStart_toStartOf="@id/tvSize"
        app:layout_constraintTop_toBottomOf="@id/tvSize" />

    <TextView
        android:id="@+id/tvColour"
        android:layout_width="195dp"
        android:layout_height="41dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tvCondition"
        app:layout_constraintStart_toStartOf="@id/tvCondition"
        app:layout_constraintTop_toBottomOf="@id/tvCondition" />

    <TextView
        android:id="@+id/tvMaterial"
        android:layout_width="194dp"
        android:layout_height="43dp"
        android:ems="10"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tvColour"
        app:layout_constraintStart_toStartOf="@id/tvColour"
        app:layout_constraintTop_toBottomOf="@id/tvColour" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="189dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tvMaterial"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/tvMaterial"
        app:layout_constraintTop_toBottomOf="@id/tvMaterial" />
</androidx.constraintlayout.widget.ConstraintLayout>